--- a/second-style.css
+++ b/second-style.css
@@ -23,7 +23,7 @@ html {
 	display: flex;
 	max-width: 100%;
 	height: 330px;
-	background-image: url(/grafiki/tiger-small.jpg);
+	background-image: url(/tiger-small.jpg);
 	background-size: cover;
 	background-position: center;
 }
@@ -112,7 +112,7 @@ html {
 	position: relative;
 	justify-content: center;
 	align-items: center;
-	background-image: url(../grafiki/parrot.jpg);
+	background-image: url(/parrot.jpg);
 	height: 350px;
 	margin-bottom: 2rem;
 	background-size: cover;
@@ -122,13 +122,13 @@ html {
 	transition: 1.5s;
 }
 .second-animal-group {
-	background-image: url(../grafiki/gorilla.jpg);
+	background-image: url(/gorilla.jpg);
 }
 .third-animal-group {
-	background-image: url(../grafiki/howk.jpg);
+	background-image: url(/howk.jpg);
 }
 .fourth-animal-group {
-	background-image: url(../grafiki/gepard.jpg);
+	background-image: url(/gepard.jpg);
 	background-position: top;
 }
 
@@ -144,7 +144,7 @@ html {
 @media (min-width: 768px) {
 	.hero-bg {
 		justify-content: center;
-		background-image: url(/grafiki/tiger-big.jpg);
+		background-image: url(/tiger-big.jpg)
 		height: 80vh;
 		background-position: center;
 	}
