--- a/second-style.css
+++ b/second-style.css
@@ -112,7 +112,7 @@ html {
 	position: relative;
 	justify-content: center;
 	align-items: center;
-	background-image: url(/parrot.jpg);
+	background-image: url(parrot.jpg);
 	height: 350px;
 	margin-bottom: 2rem;
 	background-size: cover;
