--- a/second-style.css
+++ b/second-style.css
@@ -8,16 +8,30 @@ html {
 	font-size: 10px;
 	font-family: "Open Sans", sans-serif;
 }
+body {
+	background-color: rgb(247, 228, 228);
+}
+p {
+	font-size: 1.6rem;
+}
 .wrapper {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
+	background-color: rgb(247, 242, 242);
+}
+.section-title {
+	font-size: 2rem;
+	margin: 4rem 0 1rem 0;
+	text-align: center;
+	text-transform: uppercase;
 }
 .image-shadow {
 	position: absolute;
 	height: 100%;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.4);
+	border-radius: 50px;
 }
 .hero-bg {
 	display: flex;
@@ -88,6 +102,7 @@ html {
 .about-us-info {
 	font-size: 1.5rem;
 	margin: 1.5rem;
+	text-align: center;
 }
 
 .zoo-animals {
@@ -119,6 +134,7 @@ html {
 	background-position: center;
 	background-repeat: no-repeat;
 	color: white;
+	border-radius: 50px;
 	transition: 1.5s;
 }
 .second-animal-group {
@@ -139,12 +155,31 @@ html {
 	text-align: center;
 	font-size: 1.5rem;
 }
-/* Koniec stylowania dla szerokości <768px*/
+.cooperation-box {
+	display: flex;
+	flex-direction: column;
+}
+.cooperation-text {
+	max-width: 100%;
+}
+.cooperation-baner {
+	max-width: 100%;
+	height: 400px;
+	background-image: url(/cooperation-small.jpg);
+	border-radius: 20px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin: 2rem 1rem;
+}
+.cooperation-text p {
+	margin: 0 1rem;
+	text-align: center;
+}
 
 @media (min-width: 768px) {
 	.hero-bg {
 		justify-content: center;
-		background-image: url(/tiger-big.jpg)
+		background-image: url(/tiger-big.jpg);
 		height: 80vh;
 		background-position: center;
 	}
@@ -194,6 +229,14 @@ html {
 	.fourth-animal-group {
 		width: 50%;
 		margin-bottom: 1rem;
+	}
+	.cooperation-box {
+		flex-direction: row;
+	}
+	.cooperation-text,
+	.cooperation-baner {
+		width: 50%;
+		margin: 0 1rem;
 	}
 }
 @media (min-width: 1200px) {
